io-takamaka-examples/src/main/java/io/takamaka/tests/errors/inconsistentfromcontract1/Sub.java
package io.takamaka.tests.errors.inconsistentfromcontract1;

import io.takamaka.code.lang.FromContract;

public class Sub extends Super {
	public @FromContract void m() {}
}